2002-04-02  Adam Fedor  <fedor@gnu.org>

	* configure.in (--with-name): Configure the name of the backend
	* back.make.in: Idem.
	* config.make.in: Idem.
	* Source/GNUmakefile: Idem.
	* Documentation/install.texi: Document.

	* Source/GNUmakefile.preamble: Missing include.

	* Source/x11/XGServerWindow.m: Fix slideImage method name.

2002-04-01  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -_setupRootWindow]): Read
	GSAppOwnsMiniwindow default.
	([XGServer -appOwnsMiniwindow]): Use it.
	([XGServer -miniwindow:): Idem.

	* Source/gsc/GSContext.m (-GSSendBezierPath:): Implement
	(-GSRectClipList::): Likewise.
	(-GSRectFillList::): Likewise.
	(-GSCurrentCTM): Likewise.
	(-GSSetCTM:): Likewise.
	(-GSConcatCTM:): Likewise.
	* Source/xlib/XGGState.m ([XGGState -DPSsetmiterlimit:]): Implement
	to do nothing.

	* Source/x11/GNUmakefile: Remove unsed draw.c, gradient.c, misc.c

2002-03-31  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m
	In [window:::] set the initial hints for a window, as
	setWindowHintsForStyle() would otherwise never be called.
	
2002-03-30  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile.preamble: Add graphic includes, -Wall
	* Source/gsc/GNUmakefile.preamble: Likewise.
	* Source/x11/GNUmakefile.preamble: Likewise.
	* Source/xlib/GNUmakefile.preamble: Likewise.

	* Tools/font_cacher.m: Fix include.

2002-03-29  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSGState.m (-GSSendBezierPath:): Append path in all
	cases.
	(- GSRectFillList): Implement.
	* Source/x11/XGServerWindow.m: 
	([XGServer -windowbounds:]): Don't get screen bounds.

	* Source/x11/*.c: Fix includes.

2002-03-27  Adam Fedor  <fedor@gnu.org>

	* Source/x11/GNUmakefile: Get headers from right place.
	* Source/xlib/GNUmakefile: Remove invalid header.
	
	* Source/x11/XGServerWindow.m (-window:::): Change method to
	match frontend (including setting of style).

2002-03-27  Adam Fedor  <fedor@gnu.org>
